# itmo-se-assignments

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
1-2_lab_1/: main.cpp
flaviusJosephus/: main.cpp
infectionSimulator/: main.cpp
lib/dataStructures/: CMakeLists.txt  Container.h  List.h  RingList.cpp  RingList.h
lib/flaviusJosephus/: CMakeLists.txt  FlaviusJosephus.h
lib/infectionSimulator/: CMakeLists.txt  InfectionSimulator.cpp  InfectionSimulator.h
lib/io/: CMakeLists.txt  ioutils.cpp  ioutils.h
lib/slae/: CMakeLists.txt  GaussSolver.cpp  GaussSolver.h  Matrix.cpp  Matrix.h
slaeSolver/: main.cpp
